--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
 
-<link rel="stylesheet" href="style.css">
-	
+<head>
+
+	<link rel="stylesheet" href="style.css">
+
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>International Fashion</title>
@@ -11,14 +12,14 @@
 
 <body>
 
-		<header class="first">
-		<h1>International
-       Fashion</h1>
-		
+	<header class="first">
+		<h1>International Fashion
+		</h1>
+
 	</header>
-  <nav>
-			<ul>
-				<li><a href="https://www.elle.com/fashion/"><b>Pobular in Euroup<b></a></li>
+	<nav>
+		<ul>
+			<li><a href="https://www.elle.com/fashion/"><b>Pobular in Euroup<b></a></li>
 				<li><a href="">pobular in Middle East </a></li>
 				<li><a href="">Contact Us </a></li>
 			</ul>
@@ -34,20 +35,20 @@
       <div>
         <h2>Dresses </h2>
         <img src="https://i.pinimg.com/originals/df/e0/37/dfe037e0c609fd10421157a61b978619.jpg" >
-        <h3> Our Dresses comes from the latest fashion in the world and you will be amazes of how it matches all kinds of skin tones.</h3>
+        <h3> Our Dresses comes from the latest fashion in the world and you will be amazed of how it matches all kinds of skin tones.</h3>
       </div>
       <section>
       <div>
         <h2>Winter Fashion</h2>
         <img src="https://www.nydailynews.com/resizer/48P3Ss8IDd964K5GPhQ4Ti5UBUY=/1200x0/top/arc-anglerfish-arc2-prod-tronc.s3.amazonaws.com/public/NJYYCMNHPZFOZPMHF2VLKNKGEQ.jpg">
-        <h3>Finally , you will be warm and fasionable at the ame time , Try our new line Of clothes and Enjoy this wounderful journy.</h3>
+        <h3>Finally , you will be warm and fasionable at the same time , Try our new line Of clothes and Enjoy this wounderful journy.</h3>
       </div>
       </section>
       <section>
       <div>
         <h2> Accessories </h2>
         <img  src="https://i.pinimg.com/originals/04/ce/2e/04ce2ed7c7fb8d7454fcbace300895ea.jpg" >
-        <h3> Ever feel like your look for today is amaizing , but it somehow misses something ! well check out for our new line of accessories and make your lokk Perfect .</h3>
+        <h3> Ever feel like your look for today is amaizing , but it somehow misses something ! well check out for our new line of accessories and make your look Perfect .</h3>
       </div>
     </section>
 	</main>
@@ -69,4 +70,4 @@
 
 </body>
 
-</html> 
+</html>
